# xsynth-dssi

./: AUTHORS  ChangeLog  Makefile.am  README  TODO  configure.in  dssi.h
extra/: Xsynth_gtk.glade  dump_friendly_patches.c  dump_old_xsynth_patch.c  factory_patches.Xsynth  friendly_patches.Xsynth  patch_library.Xsynth  version_0.1_patches.Xsynth
src/: Makefile.am  bitmap_about.xbm  bitmap_logo.xbm  bitmap_waveform0.xpm  bitmap_waveform1.xpm  bitmap_waveform2.xpm  bitmap_waveform3.xpm  bitmap_waveform4.xpm  bitmap_waveform5.xpm  bitmap_waveform6.xpm  gtkknob.c  gtkknob.h  gui_callbacks.c  gui_callbacks.h  gui_data.c  gui_data.h  gui_friendly_patches.c  gui_images.c  gui_images.h  gui_interface.c  gui_interface.h  gui_main.c  gui_main.h  minblep_tables.c  xsynth-dssi.c  xsynth.h  xsynth_data.c  xsynth_ports.c  xsynth_ports.h  xsynth_synth.c  xsynth_synth.h  xsynth_types.h  xsynth_voice.c  xsynth_voice.h  xsynth_voice_blosc.h  xsynth_voice_render-original.c  xsynth_voice_render.c
